# magik

./: .gitignore  Anchor.toml  README.md
cli/: Cargo.toml
cli/src/: lib.rs  main.rs  token_account.rs
programs/magik/: Cargo.toml
programs/magik/src/: lib.rs  parameters.rs  port.rs  state.rs
programs/magik/tests/: helper.rs  test_functional.rs  test_treasure.rs
tests/: magik.ts
