[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "2.33.3"
anchor-lang = "0.20.1"
solana-sdk = "1.8.5"
magik-program = {path = "../programs/magik"}
shellexpand = "2.1.0"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
anchor-client = "0.20.1"
port-variable-rate-lending-instructions = "0.2.9"
port-staking-instructions = "0.2.0"