[package]
name = "magik-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "magik_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
port-anchor-adaptor = {git = "https://github.com/port-finance/port-anchor-adaptor"}
anchor-lang = "0.20.1"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.2", features = ["no-entrypoint"] }
solana-program = "1.8.5"
anchor-spl = { version = "0.20.1", features = ["devnet"] }
